--- a/Deploy_Calculator.yml
+++ b/Deploy_Calculator.yml
@@ -9,7 +9,7 @@
 #        state: started
 
     - name: Pull Image
-      shell: docker pull shouryap1/calculator:latest
+      shell: docker pull arjunsubhedar/calculator:latest
 
     - name: Run the container
       shell: docker create -it --name Calculator arjunsubhedar/calculator
